# botan

./: .astylerc  .clang-format  .codecov.yml  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .lgtm.yml  .mtn-ignore  .pylintrc  .travis.yml  CMakeLists.txt  Crypto Brainbox  README.md  amalgamation.sh  android_amal.sh  appveyor.yml  authors.txt  botan_version.py  build_android_mk.sh  circle.yml  configure.pl  configure.py  cpace.cpp  create_modinfo.pl  doxyfile  eclipse.xml  insito.diff  insito.txt  license.txt  news.rst  pyproject.toml  readme.rst  readme.txt  sha512_exp.cpp  sonar-project.properties  todo.txt  version.txt
src/cmd/: CMakeLists.txt  apps.h  asn1.cpp  base64.cpp  bcrypt.cpp  bzip.cpp  ca.cpp  cert_verify.cpp  compress.cpp  credentials.h  dl_group.cpp  dsa_sign.cpp  dsa_ver.cpp  factor.cpp  fpe.cpp  fuzzer.cpp  getopt.cpp  getopt.h  hash.cpp  is_prime.cpp  keygen.cpp  main.cpp  mce.cpp  ocsp.cpp  pkcs10.cpp  pkcs8.cpp  prime.cpp  read_ssh.cpp  rng.cpp  self_sig.cpp  speed.cpp  speed.h  speed_pk.cpp  timer.cpp  timer.h  tls_client.cpp  tls_proxy.cpp  tls_server.cpp  tls_server_asio.cpp  x509print.cpp
src/cmd/implementation/: speed.h  speed_public_key.cpp  speed_transform.cpp
src/cmd/speed/: pk_bench.cpp  speed.cpp  speed.h
src/lib/: CMakeLists.txt
src/lib/algo_base/: algo_registry.cpp  algo_registry.h  buf_comp.h  info.txt  scan_name.cpp  scan_name.h  symkey.cpp  symkey.h  transform.h
src/lib/algo_factory/: algo_cache.h  algo_factory.cpp  algo_factory.h  prov_weight.cpp
src/lib/alloc/: secmem.h
src/lib/asio/: asio_async_handshake_op.h  asio_async_read_op.h  asio_async_write_op.h  asio_convert_exceptions.h  asio_includes.h  asio_stream.h  asio_stream_base.h  asio_stream_core.h  info.txt
src/lib/asn1/: alg_id.cpp  alg_id.h  asn1_alt_name.cpp  asn1_alt_name.h  asn1_attribute.cpp  asn1_attribute.h  asn1_obj.cpp  asn1_obj.h  asn1_oid.cpp  asn1_oid.h  asn1_print.cpp  asn1_print.h  asn1_str.cpp  asn1_str.h  asn1_time.cpp  asn1_time.h  asn1_utils.h  ber_dec.cpp  ber_dec.h  der_enc.cpp  der_enc.h  info.txt  oid_map.cpp  oid_map.h  oid_maps.cpp  oids.cpp  oids.h  pss_params.cpp  pss_params.h  static_oids.cpp  x509_dn.cpp  x509_dn.h
src/lib/base/: algo_registry.h  botan.h  buf_comp.cpp  buf_comp.h  info.txt  init.h  key_spec.h  lookup.cpp  lookup.h  scan_name.cpp  scan_name.h  secmem.h  sym_algo.cpp  sym_algo.h  symkey.cpp  symkey.h  transform.h
src/lib/benchmark/: benchmark.cpp  benchmark.h  info.txt
src/lib/block/: block_cipher.cpp  block_cipher.h  block_utils.h  info.txt
src/lib/codec/: info.txt
src/lib/compat/: info.txt
src/lib/compression/: comp_util.cpp  comp_util.h  compress_utils.cpp  compress_utils.h  compression.cpp  compression.h  info.txt
src/lib/engine/: engine.cpp  engine.h
src/lib/entropy/: entropy_src.h  entropy_srcs.cpp  info.txt
src/lib/ffi/: ffi.cpp  ffi.h  ffi_block.cpp  ffi_cert.cpp  ffi_cert.h  ffi_cert_ext.cpp  ffi_cert_ext.h  ffi_cipher.cpp  ffi_ec.cpp  ffi_ec.h  ffi_fpe.cpp  ffi_hash.cpp  ffi_hotp.cpp  ffi_kdf.cpp  ffi_keywrap.cpp  ffi_mac.cpp  ffi_mp.cpp  ffi_mp.h  ffi_oid.cpp  ffi_oid.h  ffi_pk_op.cpp  ffi_pkey.cpp  ffi_pkey.h  ffi_pkey_algs.cpp  ffi_rng.cpp  ffi_rng.h  ffi_spake2p.cpp  ffi_srp6.cpp  ffi_tls.cpp  ffi_totp.cpp  ffi_tpm2.cpp  ffi_util.h  ffi_x509_rpki.cpp  ffi_x509_rpki.h  ffi_xof.cpp  ffi_zfec.cpp  info.txt
src/lib/filters/: aead_filt.h  algo_filt.cpp  b64_filt.cpp  basefilt.cpp  basefilt.h  buf_filt.cpp  buf_filt.h  cipher_filter.cpp  cipher_filter.h  comp_filter.cpp  comp_filter.h  data_snk.cpp  data_snk.h  data_src.cpp  data_src.h  filter.cpp  filter.h  filters.h  hex_filt.cpp  info.txt  key_filt.cpp  key_filt.h  out_buf.cpp  out_buf.h  pipe.cpp  pipe.h  pipe_io.cpp  pipe_rw.cpp  secqueue.cpp  secqueue.h  threaded_fork.cpp  transform_filter.cpp  transform_filter.h
src/lib/hash/: hash.cpp  hash.h  hash_utils.h  info.txt
src/lib/hash_engine/: hash_engine.cpp  hash_engine.h  info.txt
src/lib/kdf/: info.txt  kdf.cpp  kdf.h  kdf_utils.h
src/lib/libstate/: botan.h  entropy_srcs.cpp  global_rng.cpp  global_state.cpp  global_state.h  init.cpp  init.h  libstate.cpp  libstate.h  lookup.cpp  lookup.h
src/lib/mac/: info.txt  mac.cpp  mac.h  mac_utils.h
src/lib/math/: info.txt
src/lib/misc/: info.txt
src/lib/modes/: cipher_mode.cpp  cipher_mode.h  info.txt  mode_utils.h  stream_mode.h
src/lib/openssl/: ossl_arc4.cpp
src/lib/pake/: info.txt  pake.h
src/lib/passhash/: info.txt
src/lib/pbe/: get_pbe.cpp
src/lib/pbkdf/: info.txt  pbkdf.cpp  pbkdf.h  pwdhash.cpp  pwdhash.h
src/lib/pch/: pch.h  pch_lib.h
src/lib/pk_pad/: eme.cpp  eme.h  emsa.cpp  emsa.h  get_pk_pad.cpp  info.txt  pad_utils.h  padding.cpp  padding.h
src/lib/pkcs12/: info.txt  pkcs12.cpp  pkcs12.h
src/lib/prov/: info.txt
src/lib/psk_db/: info.txt  psk_db.cpp  psk_db.h  psk_db_sql.cpp
src/lib/pubkey/: blinding.cpp  blinding.h  info.txt  pk_algs.cpp  pk_algs.h  pk_enums.h  pk_keys.cpp  pk_keys.h  pk_ops.cpp  pk_ops.h  pk_ops_fwd.h  pk_ops_impl.h  pk_options.cpp  pk_options.h  pk_options_impl.cpp  pk_options_impl.h  pk_utils.h  pkcs8.cpp  pkcs8.h  pubkey.cpp  pubkey.h  workfactor.cpp  workfactor.h  x509_key.cpp  x509_key.h
src/lib/rng/: auto_rng.h  info.txt  rng.cpp  rng.h
src/lib/selftest/: selftest.cpp  selftest.h
src/lib/stream/: info.txt  stream_cipher.cpp  stream_cipher.h  stream_utils.h
src/lib/tls/: credentials_manager.h  (+108 more)
src/tests/: CMakeLists.txt  kat_aead.cpp  kat_bigint.cpp  kat_block.cpp  kat_dh.cpp  kat_dsa.cpp  kat_ecdsa.cpp  kat_elg.cpp  kat_gost.cpp  kat_hash.cpp  kat_hkdf.cpp  kat_kdf.cpp  kat_mac.cpp  kat_modes.cpp  kat_nr.cpp  kat_ocb.cpp  kat_rsa.cpp  kat_rw.cpp  kat_stream.cpp  main.cpp  nist_x509.cpp  test_aead.cpp  test_alt_name.cpp  test_arb_eq.h  test_asn1.cpp  test_bigint.cpp  test_block.cpp  test_blowfish.cpp  test_bls12_381.cpp  test_bn256.cpp  test_bufcomp.cpp  test_c25519.cpp  test_catch.cpp  test_certstor.cpp  test_certstor_flatfile.cpp  test_certstor_linux.cpp  test_certstor_macos.cpp  test_certstor_system.cpp  test_certstor_utils.cpp  test_certstor_utils.h  (+169 more)
(+7311 files in other folders)
